--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "start": "pnpm watch",
     "build": "pnpm clean && pnpm build:plugin",
     "build:plugin": "tsc --project tsconfig.build.json && node build.js",
-    "prepare": "npm run build",
+    "prepare": "pnpm run build",
     "clean": "rimraf dist/ *.tsbuildinfo",
     "watch": "concurrently \"pnpm:watch:*\"",
     "watch:js": "node build.js --watch",
@@ -44,15 +44,15 @@
     "verify:fix": "pnpm prettier:fix && pnpm lint:fix"
   },
   "peerDependencies": {
-    "nearley": "^2",
-    "esbuild": "^0.14"
+    "esbuild": "^0.14",
+    "nearley": "^2"
   },
   "devDependencies": {
-    "@types/node": "^17.0.10",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.5.5",
     "@types/nearley": "^2.11.2",
+    "@types/node": "^20.5.7",
     "esbuild": "^0.14.10",
-    "nearley": "^2.20.1"
+    "nearley": "^2.20.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.5.5"
   }
 }
